--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="flex flex-col justify-center items-center h-svh relative">
         <h1 class="text-white text-[3rem]">Quer sair comigo?</h1>
 
-        <section class="flex mt-10 justify-between w-[300px] bg-red-200">
+        <section class="flex mt-10 justify-between w-[300px]">
             <button class="bg-red-500 w-20 h-10 rounded-[10px]">Sim</button>
             <button id="meu-botão" class="bg-blue-500 w-20 h-10 rounded-[10px] absolute top-[54.8%] bottom-[0%] left-[66%] right-[0%]">Não</button>
         </section>
