--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body class="bg-gray-600 ">
     <main class="flex flex-col justify-center items-center h-svh relative">
-        <h1 class="text-white text-[3rem]">Quer sair comigo?</h1>
+        <h1 id="h1Principal" class="text-white text-[4.5rem]">Quer sair comigo?</h1>
+        <img src="imagens/icons8-olhos-emoji-96.png" alt="">
 
         <section class="flex mt-10 justify-between w-[300px]">
-            <button id="meu-botão2" class="bg-red-500 w-20 h-10 rounded-[10px]">Sim</button>
-            <button id="meu-botão" class="bg-blue-500 w-20 h-10 rounded-[10px] absolute top-[54.8%] bottom-[0%] left-[66%] right-[0%]">Não</button>
+            <button id="meu-botão2" class="bg-[#00FFF8] w-28 h-14 rounded-[10px] text-[1.5rem] font-bold">Sim</button>
+            <button id="meu-botão" class="bg-[#00FFF8] w-28 h-14 rounded-[10px] absolute top-[64.4%] bottom-[0%] left-[60%] right-[0%] text-[1.5rem] font-bold">Não</button>
         </section>
     </main>
 
