--- a/mensagem.html
+++ b/mensagem.html
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
-<body>
-    <main class="flex flex-col justify-center items-center bg-red-400 h-svh">
-        <h1 class="text-2xl">Como vc quer encontrar o amor da sua vida se vc não fala cmg?</h1>
-        <a href="https://wa.me/5585998037589" target="_blank"><img src="imagens/icons8-whatsapp.svg" alt="logo do WhatsApp"></a>
+<body class="bg-gray-600 ">
+    <main class="flex flex-col  items-center h-svh mt-5">
+        <h1 class="text-white text-[2.4rem] text-center">Eu sabia que vc iria fazer a escolha certa!!</h1>
+        <section class="bg-gray-400 mt-5 rounded-[10px] w-[350px] h-[450px] flex flex-col items-center">
+            <h2 class="text-white text-[1.5rem] text-center mt-10">Então onde vai ser o nosso primeiro encontro ?</h2>
+
+            <ul class="flex flex-col mt-10 ">
+                <li>
+                    <input type="checkbox" id="item1" name="item1" value="item1">
+                    <label class="text-white text-[1.5rem]" for="item1">&nbsp Cinema</label>
+                </li>
+                <li class="mt-5">
+                    <input type="checkbox" id="item2" name="item2" value="item2">
+                    <label class="text-white text-[1.5rem]" for="item2">&nbsp Sair pra jantar </label>
+                </li>
+                <li class="mt-5">
+                    <input type="checkbox" id="item3" name="item3" value="item3">
+                    <label class="text-white text-[1.5rem]" for="item3">&nbsp ver o por do sol </label>
+                </li>
+            </ul>
+            <button class="bg-[#00FFF8] w-28 h-14 mt-10 rounded-[10px] text-[1rem] font-bold">Continuar</button>
+        </section>
     </main>
 </body>
 </html>
