corrigindo o bug do botão

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-600 ">
-    <main class="flex flex-col justify-center items-center h-svh relative">
+    <main class="flex flex-col justify-center items-center h-svh">
         <h1 id="h1Principal" class="text-white text-[4.5rem]">Quer sair comigo?</h1>
         <img src="imagens/icons8-olhos-emoji-96.png" alt="">
 
         <section class="flex mt-10 justify-between w-[300px]">
             <button id="meu-botão2" class="bg-[#00FFF8] w-28 h-14 rounded-[10px] text-[1.5rem] font-bold">Sim</button>
-            <button id="meu-botão" class="bg-[#00FFF8] w-28 h-14 rounded-[10px] absolute top-[62.8%] bottom-[0%] left-[60%] right-[0%] text-[1.5rem] font-bold">Não</button>
+            <button id="meu-botão" class="bg-[#00FFF8] w-28 h-14 rounded-[10px] text-[1.5rem] font-bold">Não</button>
         </section>
     </main>
 
